<resources>
    <string name="app_name">AQI</string>
    <string name="title_activity_maps">Map</string>

    <string name="intro_login_title">Login</string>

    <string name="main_menu_around_me">Around me</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_travel">Travel</string>
    <string name="main_menu_favs">Favorites</string>

    <string name="maps_tab_search_zone">Search</string>
    <string name="maps_tab_search_field_hint">Your search</string>
    <string name="maps_tab_station_aqi_label">AQI:</string>
    <string name="maps_tab_station_event_date_label">Last event date:</string>

    <string name="country_AD_name">Andorra</string>
    <string name="country_AE_name">UAE</string>
    <string name="country_AR_name">Argentina</string>
    <string name="country_AT_name">Austria</string>
    <string name="country_AU_name">Australia</string>
    <string name="country_BA_name">Bosnia Herzegovina</string>
    <string name="country_BD_name">Bangladesh</string>
    <string name="country_BE_name">Belgium</string>
    <string name="country_BG_name">Bulgaria</string>
    <string name="country_BH_name">Bahrain</string>
    <string name="country_BN_name">Brunei</string>
    <string name="country_BO_name">Bolivia</string>
    <string name="country_BR_name">Brazil</string>
    <string name="country_CA_name">Canada</string>
    <string name="country_CH_name">Switzerland</string>
    <string name="country_CL_name">Chile</string>
    <string name="country_CN_name">China</string>
    <string name="country_CO_name">Colombia</string>
    <string name="country_CY_name">Cyprus</string>
    <string name="country_CZ_name">Czech Republic</string>
    <string name="country_DE_name">Germany</string>
    <string name="country_DK_name">Denmark</string>
    <string name="country_DZ_name">Algeria</string>
    <string name="country_EC_name">Ecuador</string>
    <string name="country_EE_name">Estonia</string>
    <string name="country_ES_name">Spain</string>
    <string name="country_ET_name">Ethiopia</string>
    <string name="country_FI_name">Finland</string>
    <string name="country_FR_name">France</string>
    <string name="country_GB_name">United Kingdom</string>
    <string name="country_GI_name">Gibraltar</string>
    <string name="country_HK_name">Hong Kong</string>
    <string name="country_HR_name">Croatia</string>
    <string name="country_HU_name">Hungary</string>
    <string name="country_ID_name">Indonesia</string>
    <string name="country_IE_name">Ireland</string>
    <string name="country_IN_name">India</string>
    <string name="country_IQ_name">Iraq</string>
    <string name="country_IR_name">Iran</string>
    <string name="country_IS_name">Iceland</string>
    <string name="country_IT_name">Italy</string>
    <string name="country_JO_name">Jordan</string>
    <string name="country_JP_name">Japan</string>
    <string name="country_KG_name">Kyrgyzstan</string>
    <string name="country_KR_name">South Korea</string>
    <string name="country_KW_name">Kuwait</string>
    <string name="country_KZ_name">Kazakhstan</string>
    <string name="country_LA_name">Laos</string>
    <string name="country_LK_name">Sri Lanka</string>
    <string name="country_LT_name">Lithuania</string>
    <string name="country_LU_name">Luxembourg</string>
    <string name="country_MK_name">Macedonia</string>
    <string name="country_MM_name">Maynmar</string>
    <string name="country_MN_name">Mongolia</string>
    <string name="country_MT_name">Malta</string>
    <string name="country_MX_name">Mexico</string>
    <string name="country_MY_name">Malaysia</string>
    <string name="country_NC_name">New Caledonia</string>
    <string name="country_NL_name">Netherlands</string>
    <string name="country_NO_name">Norway</string>
    <string name="country_NP_name">Nepal</string>
    <string name="country_NZ_name">New Zealand</string>
    <string name="country_PE_name">Peru</string>
    <string name="country_PK_name">Pakistan</string>
    <string name="country_PL_name">Poland</string>
    <string name="country_PR_name">Puerto Rico</string>
    <string name="country_PT_name">Portugal</string>
    <string name="country_RE_name">La réunion</string>
    <string name="country_RO_name">Romania</string>
    <string name="country_RS_name">Serbia</string>
    <string name="country_RU_name">Russia</string>
    <string name="country_SA_name">Saudi Arabia</string>
    <string name="country_SE_name">Sweden</string>
    <string name="country_SG_name">Singapore</string>
    <string name="country_SI_name">Slovenia</string>
    <string name="country_SK_name">Slovakia</string>
    <string name="country_SV_name">El Salavor</string>
    <string name="country_TH_name">Thailand</string>
    <string name="country_TJ_name">Tajikistan</string>
    <string name="country_TM_name">Turkmenistan</string>
    <string name="country_TR_name">Turkey</string>
    <string name="country_TW_name">Taiwan</string>
    <string name="country_UA_name">Ukraine</string>
    <string name="country_UG_name">Uganda</string>
    <string name="country_US_name">USA</string>
    <string name="country_UZ_name">Uzbekistan</string>
    <string name="country_VN_name">Vietnam</string>
    <string name="country_XK_name">Kosovo</string>
    <string name="country_ZA_name">South Africa</string>

    <string name="maps_tab_zone_error_title">An error occurred</string>
    <string name="maps_tab_zone_error_message">Unable to find a station in this zone</string>
    <string name="maps_tab_search_error_title">An error occurred</string>
    <string name="maps_tab_search_error_message">Unable to find a station with your search</string>
    <string name="maps_tab_zone_no_station_title">No station</string>
    <string name="maps_tab_zone_no_station_message">Please try to expand the search zone.</string>
    <string name="maps_tab_search_no_station_title">No station</string>
    <string name="maps_tab_search_no_station_message">Please try with another search.</string>
    <string name="air_quality">Air quality %1$s</string>
    <string name="no_result">No result</string>
    <string name="droidSansBold">DroidSans-Bold.ttf</string>
    <string name="button_usaqi">USAQI</string>
    <string name="button_pm2_5">PM2.5</string>
    <string name="button_pm10">PM10</string>
    <string name="button_no2">NO2</string>
    <string name="saved_favorites">saved_favorites</string>
    <string name="sign_out">Sign out</string>
</resources>
