<?xml version="1.0" encoding="utf-8"?>


<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_quality"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infos">

        </androidx.appcompat.widget.AppCompatTextView>

        <TextView
            android:id="@+id/detail_activity_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Historique"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_quality" />

        <com.anychart.AnyChartView
            android:id="@+id/detail_activity_column_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_history_title"
            tools:layout_height="200dp" />

        <LinearLayout
            android:id="@+id/detail_activity_buttons_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_column_chart">

            <TextView
                android:id="@+id/detail_Activity_button_aqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/button_usaqi"
                android:textColor="@color/button_background"
                android:textStyle="bold"
                tools:background="@color/button_background"
                tools:textColor="#fff" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/detail_Activity_button_pm2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/button_pm2_5"
                android:textColor="@color/button_background"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/detail_Activity_button_pm10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/button_pm10"
                android:textColor="@color/button_background"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/detail_Activity_button_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/button_no2"
                android:textColor="@color/button_background"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</android.widget.ScrollView>





